change usecase-ui server standalone pom
Change-Id: I65968d6605843c8d4c2d4704dd246942c3a79845
Issue-ID: USECASEUI-259
Signed-off-by: guochuyicmri <guochuyi@chinamobile.com>

--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -181,8 +181,8 @@
                                     <name>onap/usecase-ui-server</name>
                                     <build>
                                         <cleanup>try</cleanup>
-                                        <dockerFileDir>${dockeroutput}</dockerFileDir>
-                                        <dockerFile>${dockeroutput}/Dockerfile</dockerFile>
+                                        <dockerFileDir>${basedir}/${dockeroutput}</dockerFileDir>
+                                        <dockerFile>${basedir}/${dockeroutput}/Dockerfile</dockerFile>
                                         <tags>
                                             <tag>${usecaseui.version}-SNAPSHOT-latest</tag>
                                             <tag>${usecaseui.version}-STAGING-latest</tag>
