Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = All-Projects
 [project]
 	description = Data management for Usecase UI
+[access "refs/*"]
+	owner = group ldap/onap-gerrit-usecase-ui-server-committers
