Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	description = Data management for Usecase UI
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-usecase-ui-server-committers
+	read = group GitHub Replication
