New committer promotion for Ran Xu
Change-Id: Ia8fd8244f1076e1a9df3d4af0eab38569a501287
Issue-ID: USECASEUI-347
Signed-off-by: shentao999 <shentao@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -61,5 +61,10 @@ committers:
       company: 'CMCC'
       id: 'zhangab'
       timezone: 'China/Beijing'
+    - name: 'Ran Xu'
+      email: 'xuranyjy@chinamobile.com'
+      company: 'CMCC'
+      id: 'cyuamber'
+      timezone: 'China/Beijing'
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
