Add change history for UUI committer list
Change-Id: I16f1e6f5202210f7122be6c578b2517a5faaecf9
Issue-ID: USECASEUI-367
Signed-off-by: shentao999 <shentao@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -58,3 +58,13 @@ committers:
       timezone: 'China/Beijing'
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
+    changes:
+      - type: 'Removal'
+        name: 'Amichai Hemli'
+        link: 'https://wiki.onap.org/display/DW/Amichai+Hemli+-+Committer+Removal+Request'
+      - type: 'Removal'
+        name: 'Xin Jin'
+        link: 'https://wiki.onap.org/display/DW/Xin+Jin+-+Committer+Removal+Request'
+      - type: 'Promotion'
+        name: 'Ran Xu'
+        link: 'https://wiki.onap.org/display/DW/Ran+Xu+-+Committer+Promotion+Request'
