--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -39,3 +39,8 @@ logging.level.*=ERROR
 #enable shutdown
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
+
+server.ssl.protocol=TLS
+server.ssl.key-store=classpath:keystore/uuiServer.jks
+server.ssl.key-store-password=Aa123456
+server.ssl.key-store-type=JKS
