--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
         </site>
     </distributionManagement-->
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.3.RELEASE</version>
+                <configuration>
+                    <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
         <module>server</module>
         <module>standalone</module>
