Modify the startup related scripts to support the no root startup of the container!
Issue-ID: USECASEUI-402
Change-Id: I96ee14d885b16a32b5539b803537c08d568ac080
Signed-off-by: hekeguang <hekeguang@chinamobile.com>

--- a/standalone/src/main/assembly/Dockerfile
+++ b/standalone/src/main/assembly/Dockerfile
@@ -49,4 +49,7 @@ RUN mkdir /home/uui
 WORKDIR /home/uui
 ADD usecase-ui-server-*-linux64.tar.gz /home/uui/
 
+RUN bash /home/uui/bin/docker-env-config.sh
+USER postgres
+WORKDIR /home/uui
 ENTRYPOINT /home/uui/bin/run.sh
